# cadical-sha256

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  configure  makefile.in  sha256.sh
src/: cadical.cpp  parse.cpp  sha256.cpp  sha256.hpp  sha256_2_bit.cpp  sha256_2_bit.hpp  sha256_operations.cpp  sha256_propagate.cpp  sha256_propagate.hpp  sha256_state.cpp  sha256_state.hpp  sha256_tests.cpp  sha256_util.cpp  sha256_util.hpp  stats.cpp
src/sha256/: 2_bit.cpp  2_bit.hpp  2_bit_graph.hpp  linear_propagate.hpp  lru_cache.hpp  operations.cpp  partial_assignment.hpp  propagate.cpp  propagate.hpp  sha256.cpp  sha256.hpp  state.cpp  state.hpp  strong_propagate.cpp  strong_propagate.hpp  tests.cpp  tests.hpp  types.hpp  util.cpp  util.hpp  wordwise_propagate.cpp  wordwise_propagate.hpp
src/sha256/1_bit/: 2_bit.cpp  2_bit.hpp  differential.cpp  differential.hpp  encoding.cpp  encoding.hpp  mendel_branch.hpp  propagate.cpp  propagate.hpp  state.cpp  state.hpp  strong_propagate.hpp  wordwise_propagate.hpp
src/sha256/4_bit/: 2_bit.cpp  2_bit.hpp  differential.cpp  differential.hpp  encoding.cpp  encoding.hpp  propagate.cpp  propagate.hpp  state.cpp  state.hpp
src/sha256/li2024/: 2_bit.cpp  2_bit.hpp  encoding.hpp  propagate.cpp  propagate.hpp  state.hpp  wordwise_propagate.hpp
